--- a/styles.scss
+++ b/styles.scss
@@ -1,20 +1,35 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+body {
+  background: #000022;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+}
 .grid {
-  border: 1px solid;
-  height: 120px;
-  width: 140px;
+  border: 2px solid #fff;
+  height: 36vw;
+  width: 42vw;
   display: flex;
   flex-wrap: wrap;
   div {
-    height: 20px;
-    width: 20px;
+    height: 6vw;
+    width: 6vw;
   }
 }
 
 .player-one {
-  background: red;
-  border-radius: 10px;
+  background-image: url("https://www.pinclipart.com/picdir/big/567-5675141_iron-man-symbol-iron-man-logo-png-clipart.png");
+  background-size: 100%;
+  border-radius: 50%;
 }
 .player-two {
-  background: blue;
-  border-radius: 10px;
+  background-image: url("https://www.pngkit.com/png/full/26-262980_thanos.png");
+  background-size: 100%;
+  border-radius: 50%;
+}
+
+h3 {
+  font-size: 2vw;
+  color: #fff;
 }
